<resources>
    <string name="app_name">PeerBucket</string>
    <string name="login_bottom_text">Need help?<u> Contact our Support Team</u></string>
    <string name="login_intro_text">Or try PeerBucket with\n      your company...</string>
    <string name="login_text">Log in to PeerBucket</string>
    <string name="free_trial">Start a 30 day free trial</string>
    <string name="login_other_account">or, use my email address</string>
    <string name="use_google_account">Use my Google account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="button_next">Next</string>
    <string name="button_all_done">All Done</string>
    <string name="contact_support_heading">PeerBucket Support is here to help</string>
    <string name="contact_first_heading">First, check out our</string>
    <string name="contact_second_heading">Quick question?</string>
    <string name="contact_third_heading">Need more help?</string>
    <string name="contact_first_detail">Help page</string>
    <string name="contact_second_detail">Tweet us</string>
    <string name="contact_third_detail">Email us</string>
    <string name="contact_cancel">CANCEL</string>
    <string name="free_trial_header">OK, TAKE ME TO THE FREE TRIAL</string>
    <string name="signup_text">Sign up with…</string>
    <string name="signup_password_heading">Make a new password</string>
    <string name="signup_password_description">Once you\'ve done that, we\'ll setup a new user and company account for you.</string>
    <string name="signup_password_hint">your password</string>
    <string name="login_your_password">What\'s your password?</string>
    <string name="login_password">your password?</string>
    <string name="setup_acc_header">Set up your account</string>
    <string name="setup_acc_intro">Just a few quick things to set up your account…</string>
    <string name="setup_acc_second_step_checkbox1">Sales</string>
    <string name="setup_acc_second_step_checkbox2">R&amp;D</string>
    <string name="setup_acc_second_step_checkbox3">Marketing</string>
    <string name="setup_acc_second_step_checkbox4">Managers</string>
    <string name="setup_acc_second_step_checkbox5">Finance</string>
    <string name="setup_acc_third_step_checkbox1">Redesigning a website</string>
    <string name="setup_acc_third_step_checkbox2">Planning an event</string>
    <string name="setup_acc_third_step_checkbox3">Launching a new product</string>
    <string name="setup_acc_third_step_checkbox4">Rebranding a business</string>
    <string name="setup_acc_first_step_header">First, tell us a bit about yourself and your company.</string>
    <string name="setup_acc_second_step_header">Do you have any of these teams at your company?</string>
    <string name="setup_acc_third_step_header">Got any of these projects going on right now?</string>
    <string name="setup_acc_fourth_step_header">Want to invite a partner or coworker right away?</string>
    <string name="setup_acc_second_step_detail">We\'ll give you a head start and set them up for you. You can always add more or change these later.</string>
    <string name="setup_acc_third_step_detail">Aren\'t sure yet? No problem - you can do this later.</string>
    <string name="setup_acc_fourth_step_detail">If you\'d like someone else to try PeerBucket with you. type their info below (You can skip this or do it later.) </string>
    <string name="setup_acc_et_company_name">Your company name</string>
    <string name="setup_acc_et_job_tittle">Your job tittle (optional)</string>
    <string name="setup_acc_et_coworker_name">Coworker\'s Name</string>
    <string name="setup_acc_et_coworker_email">Coworker\'s Email</string>
    <string name="setup_acc_step_1">Step 1 of 4</string>
    <string name="setup_acc_step_2">Step 2 of 4</string>
    <string name="setup_acc_step_3">Step 3 of 4</string>
    <string name="setup_acc_step_4">Step 4 of 4</string>
    <string name="team">Teams</string>
    <string name="project">Projects</string>
    <string name="search">Search</string>
    <string name="new_team">MAKE A NEW TEAM</string>
    <string name="new_project">MAKE A NEW PROJECT</string>
    <string name="logo_text">Company-wide announcements and stuff everyone needs to know.</string>
    <string name="fab_layout1">Add a To-do</string>
    <string name="fab_layout2">Add an Event</string>
    <string name="fab_layout3">Post a Message</string>
    <string name="fab_layout4">Upload Files</string>
    <string name="fab_layout5">Close</string>
    <string name="ec_intro">Company-wide announcements and stuff everyone needs to know.</string>
    <string name="ec_info"><u> Add/Remove </u></string>
    <string name="tcp_dialog_header">New Team</string>
    <string name="team_create_name">Name your team</string>
    <string name="eg_team_name">e.g. Development Team</string>
    <string name="optional_desc">Add an optional description</string>
    <string name="eg_optional_desc">e.g. Share inspiration, ideas and requests for Development</string>
    <string name="tcp_project_dialog_header">New Project</string>
    <string name="project_create_name">Name this project</string>
    <string name="eg_project_name">e.g. Office Setup</string>
    <string name="eg_optional_project_desc">e.g. Plans and scheduling for expanding the office</string>
    <string name="chat">Chat</string>
    <string name="message_board">Message Board</string>
    <string name="to_dos">To-dos</string>
    <string name="schedule">Schedule</string>
    <string name="automatic_check_ins">Automatic Check-ins</string>
    <string name="docs_files">Docs &amp; FIles</string>
    <string name="save_button">Save</string>
    <string name="om_header">Options</string>
    <string name="om_templates">Manage templates</string>
    <string name="om_adminland">Adminland</string>
    <string name="om_settings">Settings</string>
    <string name="om_help">Help</string>
    <string name="title_activity_screen">ActivityScreen</string>
    <string name="dialog_version_center_text">We\'ve updated Basecamp! \n Here\'s whats new:</string>
    <string name="dialog_version_headline">Redesigned Hey! Inbox</string>
    <string name="dialog_version_line1">\u2022 Shows new Ping conversations</string>
    <string name="dialog_version_line2">\u2022 Unread Campfires are grouped</string>
    <string name="dialog_version_line3">\u2022 Message previews with images</string>
    <string name="dialog_version_line4">\u2022 Swipe through multiple images</string>
    <string name="dialog_version_subtext">Now easier to prioritize new messages, discussions, and more...</string>
    <string name="dialog_version_close">CLOSE</string>
    <string name="companyHQ_center_text">Company-wide announcements and stuff\n everyone needs to know.</string>
    <string name="companyHQ_card1">Campfire</string>
    <string name="companyHQ_card2">Message Board</string>
    <string name="companyHQ_card3">To-dos</string>
    <string name="companyHQ_card4">Schedule</string>
    <string name="companyHQ_card5">Automatic Check-ins</string>
    <string name="companyHQ_card6">Docs and Files</string>
    <string name="companyHQ_tools">Change tools (add Email Forwards)</string>
    <string name="companyHQ_activity">Company HQ Activity</string>
    <string name="companyHQ_welcome">Welcome to  HQ!</string>
    <string name="companyHQ_welcome_subtext">User created this September 14,2018</string>
    <string name="companyHQ_welcome_description">This is the communications hub for your whole company. Use it to post announcements, notes, and stuff everyone needs to know.</string>
    <string name="companyHQ_welcome_link">Learn more about the tools above \u2022 Need a hand with anything? we're standing by!</string>
    <string name="companyHQ_welcome_end">Happy Basecamping</string>
    <string name="dialog_current_user_option1">See what\'s on my plate</string>
    <string name="dialog_current_user_option2">See what I\'ve been up to</string>
    <string name="dialog_current_user_option3">Edit Profile</string>
    <string name="dialog_other_user_option1">Ping this user!</string>
    <string name="dialog_other_user_option2">See what\'s on this user's plate</string>
    <string name="dialog_other_user_option3">See what this user had been upto</string>
    <string name="bottomsheet_dialog_chat_box_people_following"> people following this:</string>
    <string name="bottomsheet_dialog_chat_box">Unfollow</string>
    <string name="to_do_intro">Keep discussion focused, on-topic, and organized in threads. Since topics and discussions stay together, they\'re easy to reference later.</string>
    <string name="to_do_intro_dialog_heading">When would I post here?</string>
    <string name="to_do_suggest1">To share and update on your progress so far</string>
    <string name="to_do_suggest2">To gather feedback on your latest work</string>
    <string name="to_do_suggest3">To post a kickoff and rally the team</string>
    <string name="dialog_all_messsages">All messages</string>
    <string name="dialog_announcements">Announcements</string>
    <string name="dialog_FYI">FYIs</string>
    <string name="dialog_heartbeats">Heartbeats</string>
    <string name="dialog_pitches">Pitches</string>
    <string name="dialog_questions">Questons</string>
    <string name="automatic_checkin_card1_subtext">Asking 1 person every Monday at 9am.</string>
    <string name="automatic_checkin_card1_heading">What will you be working on this week?</string>
    <string name="automatic_checkin_card2_subtext">Asking 1 person every weekday at 4:30pm.</string>
    <string name="automatic_checkin_card2_heading">What did you work on today?</string>
    <string name="automatic_checkin_card3_subtext">Asking 1 person the first Monday of each month at 9am.</string>
    <string name="automatic_checkin_card3_heading">Read any good books lately?</string>
    <string name="automatic_checkin_card4_subtext">This check-in is paused, nobody is being asked.</string>
    <string name="automatic_checkin_card4_heading">Been inspired by anything lately?</string>
    <string name="docs_and_files_heading">This is a place to store and organize assets and reference material.</string>
    <string name="docs_and_files_text1">When would I use this?</string>
    <string name="docs_and_files_text2">To keep tabs of every version of a file - especially the latest one.</string>
    <string name="docs_and_files_text3">To share big files with a teammate or a contractor.</string>
    <string name="docs_and_files_text4">To keep all your docs (Google or otherwise) in one place.</string>
    <string name="dialog_profile_text1">See what\'s on my plate</string>
    <string name="dialog_profile_text2">See what I\'ve been up to</string>
    <string name="dialog_profile_text3">Edit Profile</string>
    <string name="assignment_activity_text1">You don\'t have any assignments yet. When you have to-dos assigned to you in Basecamp, they\'ll show up here.</string>
    <string name="assignment_activity_text2">You haven\'t assigned any to-dos yet. Anything you assign to someone else will show up here.</string>
    <string name="bs_docs_start">Start a new doc</string>
    <string name="bs_docs_folder">Make a new folder</string>
    <string name="bs_docs_upload">Upload files</string>
    <string name="bs_docs_google_drive">Google Drive</string>
    <string name="bs_docs_dropbox">Dropbox</string>
    <string name="bs_docs_box">Box</string>
    <string name="bs_docs_onedrive">OneDrive</string>
    <string name="change_avatar_Activity_image">Select a new image</string>
    <string name="change_avatar_Activity_text">Remove my avatar and show my iitials instead...</string>
    <string name="remove_avatar_dialog_text1">Remove your avatar?</string>
    <string name="remove_avatar_dialog_text2">Your picture will be immediately removed?</string>
    <string name="my_device_text_button1">Test this device</string>
    <string name="my_device_text_button2">Remove</string>
</resources>