<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:orderInCategory="2" />
    <item android:id="@+id/message"
        android:title="@string/search"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always"
        android:orderInCategory="1" />

    <item
        android:icon="@drawable/ic_option_dots"
        android:title="@string/om_header"
        android:orderInCategory="3"
        app:showAsAction="always">
    <menu>
    <item
        android:icon="@drawable/ic_manage_templates"
        android:title="@string/om_templates"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_adminland"
        android:title="@string/om_adminland"
        app:showAsAction="ifRoom"
        android:id="@+id/admin_land"/>
    <item
        android:icon="@drawable/ic_settings"
        android:title="@string/om_settings"
        app:showAsAction="ifRoom" />


    <item
        android:icon="@drawable/ic_help"
        android:title="@string/om_help"
        app:showAsAction="ifRoom" />
    </menu>
    </item>


</menu>