<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />


        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />


        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/dialog_version_center_text"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/ic_launcher"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_version_headline"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/dialog_version_subtext"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/dialog_version_line1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/dialog_version_line2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/dialog_version_line3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/dialog_version_line4"/>

    <TextView
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/dialog_version_close"
        android:textColor="@color/material_blue"
        android:id="@+id/textview_close"/>

</LinearLayout>
