<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:id="@+id/setup_account_header_cv_LL">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/setup_acc_header"
            android:gravity="start|center"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/setup_account_header_cv_LL"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/setup_acc_intro"
            android:text="@string/setup_acc_intro"/>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/setup_acc_step_1"
                    android:background="@drawable/shape_purple_button"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_acc_first_step_header"
                    android:textSize="17sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:hint="@string/setup_acc_et_company_name"
                    android:background="@drawable/rectangle_edit_text"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:hint="@string/setup_acc_et_job_tittle"
                    android:background="@drawable/rectangle_edit_text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_next"
                        android:layout_margin="12dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:background="@drawable/shape_green_button_small"
                        />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>