<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_back"
        android:layout_alignParentTop="true"
        android:id="@+id/navigate_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical"
        android:id="@+id/main_layout">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:text="@string/signup_text"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_white_button"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google_icon"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/use_google_account"
                android:textAllCaps="false"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/login_other_account"/>

        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/shape_white_button"
            android:hint="hello@example.com"
            android:layout_gravity="center"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:gravity="center"
            android:id="@+id/email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="@color/baseColor"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Next"
            android:textAllCaps="false"
            android:id="@+id/navigate_next"
            android:background="@drawable/shape_white_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/forgot_password_layout">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textSize="22sp"
            android:text="@string/signup_password_heading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/signup_password_description"/>


        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:background="@drawable/shape_white_button"
            android:hint="@string/signup_password_hint"
            android:layout_gravity="center"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:gravity="center"/>

        <Button
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:textColor="@color/baseColor"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/button_next"
            android:textAllCaps="false"
            android:background="@drawable/shape_white_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/login_bottom_text"/>


    </LinearLayout>

</RelativeLayout>