<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="54dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:id="@+id/close_tcp_dialog_iv"
                android:layout_gravity="center"
                android:src="@drawable/ic_close_lg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Loading..."
                android:id="@+id/header_tcp_dialog_tv"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginStart="32dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:textColor="@color/material_blue"
                android:background="@drawable/shape_blue_button_small"
                android:text="@string/save_button"
                android:textAllCaps="false"
                android:layout_gravity="center"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_create_name"
            android:textSize="18sp"
            android:id="@+id/tcp_name_header_tv"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/tcp_name_et"
            android:layout_marginTop="8dp"
            android:paddingStart="12dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:hint="@string/eg_team_name"
            android:background="@drawable/rectangle_edit_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional_desc"
            android:id="@+id/optional_desc_tv"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:id="@+id/optional_desc_et"
            android:layout_marginTop="8dp"
            android:paddingStart="12dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:hint="@string/eg_optional_desc"
            android:background="@drawable/rectangle_edit_text"/>

    </LinearLayout>

</LinearLayout>