<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />
        
        <Button
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="@color/baseColor"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/login_text"
            android:textAllCaps="false"
            android:id="@+id/login_button"
            android:background="@drawable/shape_white_button" />

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/baseColor"
            android:textSize="23sp"
            android:text="@string/login_intro_text"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/free_trial_button"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="@color/white"
            android:text="@string/free_trial"
            android:textAllCaps="false"
            android:background="@drawable/shape_green_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_support_tv"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/login_bottom_text"/>


    </LinearLayout>


</RelativeLayout>